# maestro

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SConstruct  gammasol.m  gammasolx.m  hw_parameters.m  maestro-top.cpp  requirements.txt  run.sh  run_eval.sh  run_example.sh  run_example2.sh  test1a.m  test1b.m
cost-model/: SConscript
cost-model/include/: maestro-marvel.h  option.hpp
cost-model/src/: BASE_base-objects.cpp
data/DFSL_description/: MobileNetV2_dla.m  MobileNetV2_nlr.m  MobileNetV2_rs.m  MobileNetV2_ws.m  ResNeXt50_shi.m  ResNeXt50_ws.m  Resnet34_DLA.m  Resnet34_IS.m  Resnet34_OS.m  Resnet34_RS.m  Resnet34_WS.m  Resnet50_ws.m  UNet_RS.m  UNet_nlr.m  UNet_shi.m  vgg16_dla.m  vgg16_os.m  vgg16_shi.m  vgg16_ws.m
data/dataflow/: dpt.m  os.m
data/frontend_example/: framework_to_maestro.py  frameworks_to_modelfile_maestro.py  modelfile_to_DFSL.py
data/hw/: accelerator_1.m  accelerator_2.m
data/mapping/: BMM_Example.m  GEMM_Example.m  MobileNetV2_shi.m  ResNeXt50_dla.m  ResNeXt50_nlr.m  ResNeXt50_rs.m  ResNeXt50_tpu.m  Resnet50_dla.m  Resnet50_nlr.m  Resnet50_rs.m  Resnet50_shi.m  Transformer_Complete.m  Transformer_Layers.m  UNet_kcp_ws.m  UNet_ws.m  example.m  gnmt_gemm_xp_ws.m  gnmt_gemm_yxp_os.m  gnmt_nkm.m  gnmt_nlr.m  gnmt_nmk.m  gnmt_rs.m  googlenet_dla.m  googlenet_os.m  googlenet_rs.m  googlenet_ws.m  mnasnet_kcp_ws.m  mnasnet_rs.m  mnasnet_xp_ws.m  mnasnet_ykp_os.m  ncf_gemm_rs.m  ncf_gemm_xp_ws.m  ncf_gemm_yxp_os.m  ncf_nlr.m  ncf_nmk.m  squeezenet1_0_dla.m  squeezenet1_0_os.m  squeezenet1_0_rs.m  vgg16_nlr.m  (+2 more)
docs/: frontend_tutorial.md
(+119 files in other folders)
